[arp_statent_import]Importprozess für die Statent-Daten. Erste Version

--- a/arp_statent_import/build.gradle
+++ b/arp_statent_import/build.gradle
@@ -1,7 +1,7 @@
 import ch.so.agi.gretl.tasks.*
 import ch.so.agi.gretl.api.TransferSet
 
-defaultTasks 'transferStatent'
+defaultTasks 'importStatent'
 
 
 task copyCsvFile(type: Copy) {
