--- a/agi_grundbuchplan_pub/build.gradle
+++ b/agi_grundbuchplan_pub/build.gradle
@@ -19,13 +19,13 @@ task transferAgiGrundbuchplan(type: Db2Db){
     }        
 }
 
-task updateGrundstueckPos(type: SqlExecutor, dependsOn: transferAgiGrundbuchplan) {
+task updateGrundstueckPos(type: SqlExecutor) {
     description = "Aus Performancegründen kann dieser Umbau nicht beim Transfer gemacht werden."    
     database = [dbUriPub, dbUserPub, dbPwdPub]
     sqlFiles = ["update_grundbuchplan_grundstueckpos.sql"]
 }
 
-task transferAgiGrundbuchplanauszug(type: Db2Db, dependsOn: updateGrundstueckPos) {
+task transferAgiGrundbuchplanauszug(type: Db2Db, dependsOn: transferAgiGrundbuchplan) {
     description = "Datenumbau der Informationen, die für den Grundbuchplanauszug benötigt werden."    
     sourceDb = [dbUriPub, dbUserPub, dbPwdPub]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
