--- a/arp_statpopent_hektarraster/build.gradle
+++ b/arp_statpopent_hektarraster/build.gradle
@@ -19,7 +19,7 @@ def statyear = "2021"
 task "updateHektarraster"(type: SqlExecutor) {
     description = "Update des Hektarrasters"
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
-    sqlParameters = [DB_Schema_StatPopEnt:DB_Schema_StatPopEnt,DB_Schema_Hoheitsgr_DB_Schema_Hoheitsgr,statyear:statyear]
+    sqlParameters = [DB_Schema_StatPopEnt:DB_Schema_StatPopEnt,DB_Schema_Hoheitsgr:DB_Schema_Hoheitsgr,statyear:statyear]
     sqlFiles = ['hektarraster.sql']
 }
 
