--- a/awjf_forstreviere_pub/build.gradle
+++ b/awjf_forstreviere_pub/build.gradle
@@ -3,9 +3,21 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAwjfForstreviere'
+defaultTasks 'publipub'
 
-task transferAwjfForstreviere(type: Db2Db){
+task publiedit(type: Publisher){
+  dataIdent = "ch.so.awjf.forstreviere.relational"
+  userFormats = true
+
+  database = [dbUriEdit,dbUserEdit,dbPwdEdit]
+  dbSchema = "awjf_forstreviere"
+  modelsToPublish = "SO_Forstreviere_20170512"
+
+  target = ["sftp://$sftpServerSogis/$sftpUserSogis", sftpUserSogis, sftpPwdSogis]
+  kgdiService = [simiMetadataServiceUrl, simiMetadataServiceUser, simiMetadataServicePwd]
+}
+
+task transferAwjfForstreviere(type: Db2Db, dependsOn: 'publiedit'){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
@@ -15,3 +27,16 @@ task transferAwjfForstreviere(type: Db2Db){
                     'awjf_forstreviere_pub.forstreviere_forstkreis', true)
     ];
 }
+
+task publipub(type: Publisher, dependsOn: 'transferAwjfForstreviere'){
+  dataIdent = "ch.so.awjf.forstreviere"
+  userFormats = true
+
+  database = [dbUriPub,dbUserPub,dbPwdPub]
+  dbSchema = "awjf_forstreviere_pub"
+  modelsToPublish = "SO_Forstreviere_Publikation_20170428"
+
+  target = ["sftp://$sftpServerSogis/$sftpUserSogis", sftpUserSogis, sftpPwdSogis]
+  kgdiService = [simiMetadataServiceUrl, simiMetadataServiceUser, simiMetadataServicePwd]
+}
+
