--- a/awjf_gewaesser_fischerei_pub/build.gradle
+++ b/awjf_gewaesser_fischerei_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'refreshSolr'
+defaultTasks 'publishPub'
 
 task transferAwjfFischerei(type: Db2Db){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
@@ -13,6 +13,16 @@ task transferAwjfFischerei(type: Db2Db){
     ];
 }
 
-task refreshSolr(type:Exec, dependsOn:'transferAwjfFischerei') {
+task refreshSolr(type:Exec, dependsOn: 'transferAwjfFischerei') {
 	commandLine 'curl', '-i', '--max-time', '5', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.awjf.gewaesser.fischereireviere'
+}
+
+task publishPub(type: Publisher, dependsOn: 'refreshSolr'){
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    dataIdent = "ch.so.afu.gewaesser.fischerei"
+    dbSchema = "awjf_gewaesser_fischerei_pub_v1"
+    modelsToPublish = "SO_AWJF_Gewaesser_Fischerei_Publikation_20220429"
+	userFormats = true
+    target = ["sftp://$sftpServerSogis/$sftpUserSogis", sftpUserSogis, sftpPwdSogis]
+    kgdiService = [simiMetadataServiceUrl, simiMetadataServiceUser, simiMetadataServicePwd]
 }
