[awjf_waldwanderwege_pub] add publisher

--- a/awjf_waldwanderwege_pub/build.gradle
+++ b/awjf_waldwanderwege_pub/build.gradle
@@ -14,6 +14,16 @@ task transferWaldwanderwege(type: Db2Db){
     ];        
 }
 
-task refreshSolr(type:Exec, dependsOn:'transferWaldwanderwege') {
+task publishPub(type: Publisher, dependsOn: 'refreshSolr'){
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    dataIdent = "ch.so.awjf.waldwanderung"
+    dbSchema = "awjf_waldwanderwege_pub"
+    modelsToPublish = "SO_AWJF_Waldwanderwege_202000804"
+	userFormats = true
+    target = ["sftp://$sftpServerSogis/$sftpUserSogis", sftpUserSogis, sftpPwdSogis]
+    kgdiService = [simiMetadataServiceUrl, simiMetadataServiceUser, simiMetadataServicePwd]
+}
+
+task refreshSolr(type:Exec, dependsOn:'publishPub') {
 	commandLine 'curl', '-i', '--max-time', '10', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.awjf.waldwanderwege_posten'
 }
