--- a/awjf_jagdreviere_jagdbanngebiete_pub/build.gradle
+++ b/awjf_jagdreviere_jagdbanngebiete_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAwjfJagd'
+defaultTasks 'publishPub'
 
 task publishEdit(type: Publisher){
     database = [dbUriEdit, dbUserEdit, dbPwdEdit]
