--- a/awjf_wegsanierungen_pub/build.gradle
+++ b/awjf_wegsanierungen_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAwjfWegsanierungen'
+defaultTasks 'publipub'
 
 task publiedit(type: Publisher){
   dataIdent = "ch.so.awjf.wegsanierung.relational"
