--- a/afu_gewaesser_revitalisierung_pub/build.gradle
+++ b/afu_gewaesser_revitalisierung_pub/build.gradle
@@ -3,13 +3,32 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferData'
+defaultTasks 'publishPub'
 
-task transferData(type: Db2Db){
+task publishEdit(type: Publisher){
+    database = [dbUriEdit, dbUserEdit, dbPwdEdit]
+    dataIdent = "ch.so.afu.fliessgewaesser.revitalisierung.relational"
+    dbSchema = "afu_gewaesser_revitalisierung_v1"
+    modelsToPublish = "SO_AFU_Gewaesser_Revitalisierung_20220629"
+    target = ["sftp://$sftpServerSogis/$sftpUserSogis", sftpUserSogis, sftpPwdSogis]
+    kgdiService = [simiMetadataServiceUrl, simiMetadataServiceUser, simiMetadataServicePwd]
+}
+
+task transferData(type: Db2Db, dependsOn: publishEdit){
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_gewaesser_revitalisierung_nutzen.sql', 'afu_gewaesser_revitalisierung_pub_v1.gewaesser_revitalisierung_nutzen', true),
             new TransferSet('afu_gewaesser_revitalisierung_priorisierung.sql', 'afu_gewaesser_revitalisierung_pub_v1.gewaesser_revitalisierung_priorisierung', true)
     ];
+}
+
+task publishPub(type: Publisher, dependsOn:transferData){
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    dataIdent = "ch.so.afu.fliessgewaesser.revitalisierung"
+    dbSchema = "afu_gewaesser_revitalisierung_pub_v1"
+    modelsToPublish = "SO_AFU_Gewaesser_Revitalisierung_20220629"
+	userFormats = true
+    target = ["sftp://$sftpServerSogis/$sftpUserSogis", sftpUserSogis, sftpPwdSogis]
+    kgdiService = [simiMetadataServiceUrl, simiMetadataServiceUser, simiMetadataServicePwd]
 }
