--- a/avt_oev_gueteklassen_import/build.gradle
+++ b/avt_oev_gueteklassen_import/build.gradle
@@ -6,7 +6,7 @@ import java.nio.file.Files
 import java.nio.file.Paths
 import java.io.File
 
-defaultTasks ''
+defaultTasks 'publipub'
 
 task rename(type: Copy) {
     from 'upload'
@@ -32,7 +32,7 @@ task import_to_pub(type: Ili2pgImport){
      deleteData = true
 }
 
-task publipub(type: Publisher){
+task publipub(type: Publisher, dependsOn: import_to_pub){
   dataIdent = "ch.so.avt.oev_gueteklasse"
   userFormats = true
 
