--- a/awjf_wald_pub/build.gradle
+++ b/awjf_wald_pub/build.gradle
@@ -5,19 +5,8 @@ apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'refreshSolr'
 
-task publieditOberhoehenbonitaet(type: Publisher){
-  dataIdent = "ch.so.awjf.oberhoehenbonitaet"
-  userFormats = true
 
-  database = [dbUriEdit,dbUserEdit,dbPwdEdit]
-  dbSchema = "awjf_wald_oberhoehenbonitaet_v1"
-  modelsToPublish = "SO_AWJF_Wald_Oberhoehenbonitaet_20211027"
-
-  target = ["sftp://$sftpServerSogis/$sftpUserSogis", sftpUserSogis, sftpPwdSogis]
-  kgdiService = [simiMetadataServiceUrl, simiMetadataServiceUser, simiMetadataServicePwd]
-}
-
-task transferAwjfSogis(type: Db2Db, dependsOn:'publieditOberhoehenbonitaet') {
+task transferAwjfSogis(type: Db2Db) {
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
@@ -36,6 +25,19 @@ task transferAwjfEdit(type: Db2Db, dependsOn:'transferAwjfSogis') {
     ];
 }
 
-task refreshSolr(type:Exec, dependsOn:'transferAwjfEdit') {
+task publipubOberhoehenbonitaet(type: Publisher, dependsOn:'transferAwjfEdit'){
+  dataIdent = "ch.so.awjf.oberhoehenbonitaet"
+  userFormats = true
+
+  database = [dbUriPub,dbUserPub,dbPwdPub]
+  dbSchema = "awjf_wald_oberhoehenbonitaet_pub_v1"
+  modelsToPublish = "SO_AWJF_Wald_Oberhoehenbonitaet_20211027"
+
+  target = ["sftp://$sftpServerSogis/$sftpUserSogis", sftpUserSogis, sftpPwdSogis]
+  kgdiService = [simiMetadataServiceUrl, simiMetadataServiceUser, simiMetadataServicePwd]
+}
+
+
+task refreshSolr(type:Exec, dependsOn:'publipubOberhoehenbonitaet') {
     commandLine 'curl', '-i', '--max-time', '20', solrIndexupdaterBaseUrl + '/queue?ds=ch.so.awjf.schutzwaldausscheidung,ch.so.awjf.schutzwald_hauptgefahrenpotentiale,ch.so.awjf.bestandeskarte_wald_flaechen,ch.so.awjf.waldplan.waldeigentum,ch.so.awjf.waldplan.waldfunktion,ch.so.awjf.waldplan.waldplantyp'
 }
