--- a/awjf_wildtierkorridore_pub/build.gradle
+++ b/awjf_wildtierkorridore_pub/build.gradle
@@ -3,7 +3,7 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAwjfWildtierkorridorePub'
+defaultTasks 'publipub'
 
 task transferAwjfWildtierkorridorePub(type: Db2Db) {
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
