--- a/awjf_programm_biodiversitaet_wald_pub/build.gradle
+++ b/awjf_programm_biodiversitaet_wald_pub/build.gradle
@@ -5,7 +5,19 @@ apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'transferAwjfBiodiversitaetWald'
 
-task transferAwjfBiodiversitaetWald(type: Db2Db) {
+task publiedit(type: Publisher){
+  dataIdent = "ch.so.awjf.programm_biodiversitaet_wald.relational"
+  userFormats = true
+
+  database = [dbUriEdit,dbUserEdit,dbPwdEdit]
+  dbSchema = "awjf_programm_biodiversitaet_wald_v1"
+  modelsToPublish = "SO_AWJF_Programm_Biodiversitaet_Wald_20220224"
+
+  target = ["sftp://$sftpServerSogis/$sftpUserSogis", sftpUserSogis, sftpPwdSogis]
+  kgdiService = [simiMetadataServiceUrl, simiMetadataServiceUser, simiMetadataServicePwd]
+}
+
+task transferAwjfBiodiversitaetWald(type: Db2Db, dependsOn: 'publiedit') {
     sourceDb = [dbUriEdit, dbUserEdit, dbPwdEdit]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
@@ -18,3 +30,16 @@ task transferAwjfBiodiversitaetWald(type: Db2Db) {
                     
     ];
 }
+
+task publipub(type: Publisher, dependsOn: 'transferAwjfBiodiversitaetWald'){
+  dataIdent = "ch.so.awjf.programm_biodiversitaet_wald"
+  userFormats = true
+
+  database = [dbUriPub,dbUserPub,dbPwdPub]
+  dbSchema = "awjf_programm_biodiversitaet_wald_pub_v1"
+  modelsToPublish = "SO_AWJF_Programm_Biodiversitaet_Wald_Publikation_20220224"
+
+  target = ["sftp://$sftpServerSogis/$sftpUserSogis", sftpUserSogis, sftpPwdSogis]
+  kgdiService = [simiMetadataServiceUrl, simiMetadataServiceUser, simiMetadataServicePwd]
+}
+
