--- a/awjf_wald_pub/build.gradle
+++ b/awjf_wald_pub/build.gradle
@@ -51,7 +51,7 @@ task publipubOberhoehenbonitaet(type: Publisher, dependsOn: 'refreshSolr') {
 task publishPub(type: Publisher, dependsOn: 'publipubOberhoehenbonitaet') {
     database = [dbUriPub, dbUserPub, dbPwdPub]
     dataIdent = "ch.so.awjf.waldstandorte"
-    dbSchema = awjf_waldstandorte_pub_v1"
+    dbSchema = "awjf_waldstandorte_pub_v1"
     modelsToPublish = "SO_AWJF_Waldstandorte_Publikation_20211027"
 	userFormats = true
     target = ["sftp://$sftpServerSogis/$sftpUserSogis", sftpUserSogis, sftpPwdSogis]
